--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -3145,9 +3145,9 @@ Then the function
 \end{equation}
 inverts $M$ in the sense that it obeys\footnote{When $V$ is a finite-dimensional vector space, 
 for a map $M: V \otimes V \to \R$, $M^{-1}: V^* \otimes V^* \to \R$ can be characterized by the equation $M(M^{-1}(\eta, \cdot), v) = \eta(v).$
-This is an infinite-dimensional version of that equation where we take $V$ to be the space
-of all functions on $S^1$.}
-\begin{equation}
+\eqref{eq:M-G-inverse} is an infinite-dimensional version of that equation, 
+where we take $V$ to be the space of functions on $S^1$.}
+\begin{equation} \label{eq:M-G-inverse}
   M\left(G(t,t'), f(t)\right) = f(t').
 \end{equation}
 Then, in parallel with the story of the $0$-dimensional theory
