--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -3683,7 +3683,7 @@ spin structure by the double cover, to get another spin structure.)
 \end{exercise}
 
 \fixme{explain $\C\PP^2$ has no spin structure, generally
-$w_2 \in H_2(X,\Z/2\Z)$ is the obstruction to having one}
+$w_2 \in H^2(X,\Z/2\Z)$ is the obstruction to having one}
 
 \begin{prop}[Spin representations] 
 $\Cliff(2n)$ admits a $\Z/2\Z$-graded irreducible complex representation, $S = S^0 \oplus S^1$, where each of $S^0$ and $S^1$ has complex dimension $2^{n-1}$ and is a representation of $\Spin(V)$.
