--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -3322,7 +3322,7 @@ The two symmetries $Q$ and $H$ are not unrelated:
 \begin{exercise}
 Verify that $Q$ and $H$ obey the \ti{$1$-dimensional supersymmetry algebra}
 \begin{equation}
-  \half [Q,Q] = H.
+  \half [Q,Q] = -H.
 \end{equation}
 \end{exercise}
 Thus, in this theory $Q$ provides a ``square root of time translations.''
