fix typo (thanks Ivan)

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -3154,8 +3154,8 @@ Then, in parallel with the story of the $0$-dimensional theory
 with quartic potential in \autoref{sec:feynman-diagrams-0d},
 the Feynman diagrams with $\le 2$ vertices give
 \begin{align} \label{eq:Z-1d-pert-first}
-  \log \frac{Z}{Z_0} &\sim 1 - \frac{\lambda}{8} \int \de t \, G(0)^2 + \frac{\lambda^2}{48} \int \de t \, \de t' \, G(t-t')^4 + \frac{\lambda^2}{16} \int \de t \, \de t' \, G(t-t')^2 G(0)^2 + O(\lambda^3) \\
-  &= 1 - \frac{\lambda T}{32 \omega^2} \left(\coth\left(\frac{\omega T}{2}\right)\right)^2 + O(\lambda^2). \label{eq:Z-1d-pert}
+  \log \frac{Z}{Z_0} &\sim - \frac{\lambda}{8} \int \de t \, G(0)^2 + \frac{\lambda^2}{48} \int \de t \, \de t' \, G(t-t')^4 + \frac{\lambda^2}{16} \int \de t \, \de t' \, G(t-t')^2 G(0)^2 + O(\lambda^3) \\
+  &= - \frac{\lambda T}{32 \omega^2} \left(\coth\left(\frac{\omega T}{2}\right)\right)^2 + O(\lambda^2). \label{eq:Z-1d-pert}
 \end{align}
 Here is one concrete consequence of this formula.
 In the limit of large $T$, $\omega T \gg 1$, 
